[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncm-mcp-servers"
version = "1.0.0"
description = "Suite of focused MCP servers for Cradlepoint NCM API management"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]==1.28.0",
    "requests==2.32.3",
    "urllib3==2.2.3",
]

[project.scripts]
ncm-fleet = "ncm_mcp_servers.ncm_fleet.server:main"
ncm-monitoring = "ncm_mcp_servers.ncm_monitoring.server:main"
ncm-cloud-services = "ncm_mcp_servers.ncm_cloud_services.server:main"
ncm-mcp-servers = "ncm_mcp_servers.__main__:main"

[tool.setuptools.packages.find]
include = ["ncm_mcp_servers*"]

[tool.setuptools.package-data]
ncm_mcp_servers = ["*.json"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "ncm_mcp_servers.shared.ncm"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "ncm_mcp_servers.ncm_fleet.tools.*",
    "ncm_mcp_servers.ncm_monitoring.tools.*",
    "ncm_mcp_servers.ncm_cloud_services.tools.*",
]
ignore_errors = true
